# Clean_folder_m3

./: .buildinfo  README.md  genindex.html  pyproject.toml  searchindex.js
.github/workflows/: docs.yml
clean_folder/: additional.py  cmd.py  main.py
docs/source/: conf.py
