[tool.poetry]
name = "Folder-Organizer"
version = "0.1.0"
description = ""
authors = ["MykolaMS9 <139469635+MykolaMS9@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "clean_folder"}]

[tool.poetry.dependencies]
python = "^3.10"
sphinx = "^8.1.3"
aiopath = "0.6.11"
aioshutil = "^1.5"
rarfile = "^4.2"
patool = "^3.1.0"
unrar = "^0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
